@@ -277,6 +277,7 @@ search.title=\u641C\u7D22
 searchresult.notfound=\u6CA1\u6709\u627E\u5230"{0}"\u76F8\u5173\u4E3B\u9898\u3002
 searchresult.title=\u67E5\u627E "{0}"
 setup.caption.adminlogin=\u7BA1\u7406\u5458\u767B\u5F55
+setup.error.jdk=JAMWiki requires a minimum JDK version of {0}.  The current system is reporting JDK version {1}.
 setup.error.notrequired=\u7CFB\u7EDF\u5B89\u88C5\u5DF2\u7ECF\u5B8C\u6210\uFF0C\u8FDB\u5165\u7BA1\u7406\u9875\u9762\u8FDB\u884C\u8BBE\u7F6E\u3002
 setup.error.upgrade=\u65B0\u5B89\u88C5\u5DF2\u88AB\u6267\u884C\uFF0C\u4F46\u662FJAMWiki\u6570\u636E\u5E93\u5DF2\u7ECF\u5B58\u5728\u3002\u5982\u679C\u5B89\u88C5\u4E86\u4EE5\u524D\u7248\u672C\u7684JAMWiki\uFF0C\u8BF7\u4F7F\u7528\u5347\u7EA7\u7A0B\u5E8F,\u8BE6\u7EC6\u8FC7\u7A0B\u53C2\u8003UPGRADE.txt\u3002\u5982\u679C\u4F60\u60F3\u4F7F\u7528\u5DF2\u7ECF\u5B58\u5728\u7684\u6570\u636E\u5E93\u5B89\u88C5\u5F53\u524D\u7248\u672C\u7684JAMWiki\uFF0C\u6709\u53EF\u80FD\u4EA7\u751F\u9519\u8BEF\u3002\u70B9\u51FB\u201C\u7EE7\u7EED\u201D\u6309\u94AE\u6765\u5B8C\u6210\u4F60\u7684\u65B0\u7248\u672C\u5B89\u88C5\u3002
 setup.title=\u5B89\u88C5
