@@ -277,6 +277,7 @@ search.title=\u641C\u7D22
 searchresult.notfound=\u6C92\u6709\u627E\u5230 "{0}" \u76F8\u95DC\u4E3B\u984C\u3002
 searchresult.title=\u67E5\u627E "{0}"
 setup.caption.adminlogin=\u7BA1\u7406\u54E1\u767B\u9304
+setup.error.jdk=JAMWiki requires a minimum JDK version of {0}.  The current system is reporting JDK version {1}.
 setup.error.notrequired=\u7CFB\u7D71\u5B89\u88DD\u5DF2\u7D93\u5B8C\u6210\uFF0C\u9032\u5165\u7BA1\u7406\u9801\u9762\u9032\u884C\u8A2D\u7F6E\u3002
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=\u5B89\u88DD
